fixing the navbar bug

--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
 
       <button type="button" class="navbar-burger" onclick="toggleMenuOpen()">
         <span class="material-icons">
-          <img src="menu.svg" alt="" />
+          <img src="menu.svg" alt="menu" />
         </span>
       </button>
       <h1 class="navbar-title">Awards</h1>
       <nav class="navbar-menu">
-        <button type="button">Skills</button>
-        <button type="button" class="active">Awards</button>
-        <button type="button">Projects</button>
+        <a href="#">Awards</a>
+        <a href="#">Blog</a>
+        <a href="#">Projects</a>
+        <a href="#">Skills</a>
+        <a href="#">About</a>
       </nav>
     </nav>
     <!-- -->
@@ -214,6 +216,6 @@
         delectus!
       </p>
     </div>
-    <script type="module" src="/main.js"></script>
+    <script type="text/javascript" src="/main.js"></script>
   </body>
 </html>
