--- a/index.html
+++ b/index.html
@@ -216,6 +216,6 @@
         delectus!
       </p>
     </div>
-    <script type="text/javascript" src="/main.js"></script>
+    <script type="text/javascript" src="/Js-BASICS/main.js"></script>
   </body>
 </html>
